[gd_scene load_steps=2 format=3 uid="uid://dquestscreen001"]

[ext_resource type="Script" path="res://scripts/quest/QuestScreen.gd" id="1_script"]

[node name="QuestScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MainPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quests"
theme_override_font_sizes/font_size = 24

[node name="StatsLabel" type="Label" parent="MainPanel/VBox/Header"]
layout_mode = 2
text = "Total: 0 | Active: 0 | Completed: 0"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/VBox/Header"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBox"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MainPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Main" type="Control" parent="MainPanel/VBox/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBox/TabContainer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestList" type="VBoxContainer" parent="MainPanel/VBox/TabContainer/Main/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Side" type="Control" parent="MainPanel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBox/TabContainer/Side"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestList" type="VBoxContainer" parent="MainPanel/VBox/TabContainer/Side/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Daily" type="Control" parent="MainPanel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBox/TabContainer/Daily"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestList" type="VBoxContainer" parent="MainPanel/VBox/TabContainer/Daily/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Footer" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2
alignment = 2

[node name="RefreshButton" type="Button" parent="MainPanel/VBox/Footer"]
layout_mode = 2
text = "Refresh"
